// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: HealthStatus  should render properly:  should render properly with header type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    header
  </div>
  <span
    className="statusCircleBg size16 status-header"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with info type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    test tooltip
  </div>
  <span
    className="statusCircleBg size16 status-info"
  >
    <span
      className="text"
    >
      test info
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with lowwarn type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    lowwarn
  </div>
  <span
    className="statusCircleBg size16 status-lowwarn"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with number type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    0
  </div>
  <span
    className="statusCircleBg size32 status-number"
  >
    <span
      className="text"
    >
      0
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with ongoing type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    ongoing
  </div>
  <span
    className="statusCircleBg size16 status-ongoing"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with stopped type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    stopped
  </div>
  <span
    className="statusCircleBg size16 status-stopped"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with undefined type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    undefined
  </div>
  <span
    className="statusCircleBg size16 status-undefined"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with unused type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    ununsed
  </div>
  <span
    className="statusCircleBg size16 status-ununsed"
  >
    <span
      className="text"
    >
      test default
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should render properly:  should render properly with warning type 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    warning
  </div>
  <span
    className="statusCircleBg size16 status-warning"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;

exports[`Unit Test: HealthStatus  should work properly:  should update properly when props change 1`] = `
<div
  className="mock-a10-tooltip"
>
  <div
    className="mock-tooltip"
  >
    stopped
  </div>
  <span
    className="statusCircleBg size16 status-stopped"
  >
    <span
      className="text"
    >
      
    </span>
  </span>
</div>
`;
